Fixing banner gap

--- a/assets/styles/homepage.css
+++ b/assets/styles/homepage.css
@@ -625,7 +625,7 @@ body {
 }
 
 .banner-spacer {
-	height: auto;
+	height: clamp(200px, 30vw, 400px);
 	width: 100%;
 	transition: height 0.4s ease;
 }
